--- a/qformdialog.ui
+++ b/qformdialog.ui
@@ -20,9 +20,9 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QPushButton" name="okButton">
+      <widget class="QPushButton" name="updateButton">
        <property name="text">
-        <string>Ok</string>
+        <string>Update Values</string>
        </property>
       </widget>
      </item>
